# mantid-data

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  release.yml
src/mantiddata/: __init__.py  __main__.py  build_registry.py  buildregistry.py  main.py  registry.txt
tests/: test_mantiddata.py
