[metadata]
name = mantiddata
author = Jan-Lukas Wynen
description = Utilities for accessing Mantid's test data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jl-wynen/mantid-data
project_urls =
    Bug Tracker = https://github.com/jl-wynen/mantid-data/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    pooch
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mantiddata = mantiddata.__main__:main

[flake8]
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203

[yapf]
based_on_style = pep8
column_limit = 88
